--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "foundation-sites": "6.5.1",
     "jquery": "^3.4.1",
     "motion-ui": "^2.0.3",
+    "npm-check": "^5.9.0",
     "what-input": "^4.1.3"
   },
   "devDependencies": {
