--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "jquery": "^3.4.1",
     "motion-ui": "^2.0.3",
     "npm-check": "^5.9.0",
+    "object-fit-images": "^3.2.4",
+    "objectFitPolyfill": "^2.3.0",
     "what-input": "^4.1.3"
   },
   "devDependencies": {
